hover wrap is fixed! Yay. Had to use jQuery to set width dynamically

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -429,7 +429,6 @@ h3.spec {
 .item-thumbs .hover-wrap {
 	position: absolute;
 	display: block;
-	width: 100%;
 	height: 100%;
 	
 	opacity: 0;
